refactor: address parallel-review findings (33 fixed, 21 accepted)
HIGH fixes:
- Disambiguate task names: removeContainer/Volume/Network<X>, createVolume/Network<X>;
  start/stop stay simple. Updates Names, README, tests.
- Readiness rewrite: try-with-resources around log stream, UTF-8 charset,
  partial-frame buffering, proper InterruptedException + NotFoundException
  handling, redundant matcher allocation removed.
- StartContainerTask: pull awaitCompletion return value checked,
  PullImageResultCallback closed, inspectImageCmd only when waitFor=Healthcheck
  (NEVER policy now wraps NotFoundException), tcpPort fails fast on missing
  host-port mapping, daemon host extracted from DOCKER_HOST instead of
  hard-coded 127.0.0.1.
- DockerService: separate locks for client construction vs daemon precheck;
  close() always resets state up front, narrows throws to IOException.

DSL ergonomics:
- Default waitFor changed from healthcheck() to none() — common case no longer
  trips on no-HEALTHCHECK images.
- Validation now catches missing image, duplicate mount targets, host-port
  collisions, and containerName collisions across containers.
- Per-task descriptions set in DockerPlugin so ./gradlew tasks is informative.
- Names accepts '.' (valid Docker resource char).
- Javadoc on getPorts() clarifies host -> container direction.
- Mounts returns immutable List.copyOf snapshots.

Plugin polish:
- @UntrackedTask on every concrete task (validator doesn't follow inheritance);
  removed @DisableCachingByDefault duplicates and getOutputs().upToDateWhen(false).
- BuildService scoped: 'io.github.pgatzka.docker.DockerService' (was 'docker').
- jacocoTestReport now consumes both test.exec and functionalTest.exec.
- Plugin tags trimmed to the relevant three.
- Lombok @Getter removed from ContainerSpec/VolumeSpec/NetworkSpec; explicit
  getName() added.

Security:
- getEnvironment() moved to @Internal so secret env values don't get
  fingerprinted into Gradle task inputs / build scans.